--- a/GithubRepositories.html
+++ b/GithubRepositories.html
@@ -2,16 +2,54 @@
 <html>
 <head>
 <title>GitHub</title>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <body bgcolor="black">
-<h1 style="color:green">GitHub</h1>
-<h2 style="color:white">Academy of Technology,ECE</h2>
-<h2 style="color:red">GithubRepositories</h2>
-<a href="https://github.com/abhi7187/Code-with-CPP">Anujit</a>
-<p> </p>
-<a href="https://github.com/abhi7187/C-basics ">Abhishek</a>
-<p> </p>
-<a href="https://github.com/abhi7187/CPP-BASICS">Aninda</a>
+    <div id="heads">
+
+        <div id="e1" ><h1 >GitHub</h1></div>
+        <div id="e2"><h2 >Academy of Technology,ECE</h2></div>
+        <div id="e3"><h2 >GithubRepositories</h2></div>
+    </div>
+<br><br>
+<div id="links">
+
+    <button>
+        <a href="https://github.com/abhi7187/Code-with-CPP">Anujit</a>
+        <span class="w3-badge w3-red">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5z"/>
+                <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0v-5z"/>
+              </svg>
+        </span>
+    </button>
+    <br>
+    <button>
+        <a href="https://github.com/abhi7187/C-basics ">Abhishek</a>
+        <span class="w3-badge w3-red">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5z"/>
+                <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0v-5z"/>
+              </svg>
+        </span>
+    </button>
+    <br>
+    <button>
+       
+        <a href="https://github.com/abhi7187/CPP-BASICS">Aninda</a>
+        <span class="w3-badge w3-red">
+            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5z"/>
+                <path fill-rule="evenodd" d="M16 .5a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 0 0 1h3.793L6.146 9.146a.5.5 0 1 0 .708.708L15 1.707V5.5a.5.5 0 0 0 1 0v-5z"/>
+              </svg>
+        </span>
+    </button>
+
+</div>
+
+
+
+
 </body>
 </html>
